--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ SuperSuit==3.4.0
 PettingZoo==1.18.1
 gym==0.22.0
 cvxpy==1.1.15
-AutoROM==0.4.2ecos==2.0.7.post1
+PuLP==2.6.0
+gurobipy==9.5.2
+AutoROM
