--- a/confs/pettingzoo_double_dunk_v3_nash_dqn.yaml
+++ b/confs/pettingzoo_double_dunk_v3_nash_dqn.yaml
@@ -1,7 +1,7 @@
 env_args:
-  env_name: boxing_v2
+  env_name: double_dunk_v3
   env_type: pettingzoo
-  num_envs: 3
+  num_envs: 5
   ram: false
   seed: random
 agent_args:
